# openVR-tracker-ROS

./: CMakeLists.txt  package.xml
config/: calibration.yaml  tracker_params.yaml
doc/: tracker_jump_detection_test_plan.md
include/tracker/: openvr_context.hpp  steamvr_manager.hpp  tracker_reader.hpp  trackers_node.hpp  types.hpp
include/tracker/pipeline/: calibrator.hpp  detector.hpp  filter.hpp  types.hpp  validator.hpp
launch/: run_steamvr_with_env.sh  steamvr.launch.py  trackers.launch.py
src/: openvr_context.cpp  steamvr_manager.cpp  steamvr_node.cpp  tracker_reader.cpp  trackers_node.cpp
src/pipeline/: calibrator.cpp  detector.cpp  filter.cpp  validator.cpp
tools/: config_tracker_sn.cpp  list_tracker_sn.cpp
